[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Instances/World/Zones/ZoneBase.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103.339, 72.2674 )

[node name="ZoneBase" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.333333 )
shape = SubResource( 1 )

[node name="EntitesContanier" type="Node" parent="."]

[connection signal="body_entered" from="." to="." method="_on_ZoneBase_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ZoneBase_body_exited"]
